<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_map"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/cl_search"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/large_padding"
            app:layout_constraintBottom_toBottomOf="parent">

            <Spinner
                android:id="@+id/spinner_departure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_origin"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spinner_arrival"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:hint="@string/hint_destination"
                app:layout_constraintTop_toBottomOf="@id/spinner_departure" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_search_itinerary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/action_search"
                app:layout_constraintTop_toBottomOf="@id/spinner_arrival" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>